--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 *.rbc
 capybara-*.html
 .rspec
-/log
 /tmp
 /db/*.sqlite3
 /public/system
@@ -29,3 +28,7 @@ config/secrets.yml
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
+
+# Ignore all logfiles and tempfiles.
+/log/*
+!/log/.keep
